// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'renders fancy with button as span or div' 1`] = `
<div>
  span
</div>
`;

exports[`'renders fancy with button mock from file' 1`] = `
<div>
  <span>
    file mock
  </span>
</div>
`;
